--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,7 +1,19 @@
-$body-bg:	#2ecc71;
-$navbar-inverse-bg:	#27ae60;
-$navbar-inverse-link-color:	white;
-$brand-primary: #f39c12;
-$jumbotron-bg: #ecf0f1;
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
+
+$body-bg:	#2980b9;
+$font-family-sans-serif:  "Lato";
+$navbar-height:		60px;
+$navbar-default-bg:	white;
+$navbar-default_brand-color:	#c0392b;
+$brand-primary: #c0392b;
+$jumbotron-bg: white;
 
 @import 'bootstrap';
+
+.center {
+	text-align: center;
+}
+
+.navbar-brand {
+	font-weight: bold;
+}
