--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -10,7 +10,7 @@
 				<p>
 				  <%= @pin.description %>
 				</p>
-				<p><strong><%= @pin.user.email if @pin.user %></strong></p>
+				<p><strong><%= @pin.user.name if @pin.user %></strong></p>
 
 				<% if @pin.user == current_user %>
 					<%= link_to 'Edit', edit_pin_path(@pin) %> |
